hphp/hack/test/sound_dynamic/typing/supportdynamic.bad.php.legacy_decl.exp
File "supportdynamic.bad.php", line 5, characters 3-11:
a nonnull value does not allow array append (Typing[4006])
  File "supportdynamic.bad.php", line 3, characters 26-32:
  Definition is here
File "supportdynamic.bad.php", line 25, characters 6-6:
Enums must be `int` or `string` or `arraykey`, not `supportdyn<nonnull>` (Typing[4024])
File "supportdynamic.bad.php", line 6, characters 3-5:
Was expecting a class, but got a nonnull value (Typing[4026])
File "supportdynamic.bad.php", line 7, characters 8-8:
You are trying to access the method `m` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "supportdynamic.bad.php", line 3, characters 26-32:
  Definition is here
File "supportdynamic.bad.php", line 8, characters 9-9:
You are trying to access the method `m` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "supportdynamic.bad.php", line 3, characters 26-32:
  Definition is here
File "supportdynamic.bad.php", line 9, characters 3-5:
Typing error (Typing[4062])
  File "supportdynamic.bad.php", line 9, characters 8-8:
  You are trying to access the property `p` but this is a nonnull value. Use a **specific** class or interface name.
  File "supportdynamic.bad.php", line 3, characters 26-32:
  Definition is here
File "supportdynamic.bad.php", line 10, characters 3-5:
Typing error (Typing[4062])
  File "supportdynamic.bad.php", line 10, characters 9-9:
  You are trying to access the property `p` but this is a nonnull value. Use a **specific** class or interface name.
  File "supportdynamic.bad.php", line 3, characters 26-32:
  Definition is here
File "supportdynamic.bad.php", line 23, characters 27-30:
Invalid type hint (Typing[4062])
  File "supportdynamic.bad.php", line 23, characters 30-30:
  You are trying to access the type constant `C` but this is a nonnull value
  File "supportdynamic.bad.php", line 21, characters 21-27:
  Definition is here
File "supportdynamic.bad.php", line 26, characters 16-39:
Wrong number of type arguments (expected 1, got 2) (Typing[4101])
  File "supportdynamic.hhi", line 6, characters 11-20:
  Definition is here
File "supportdynamic.bad.php", line 16, characters 12-14:
Invalid `foreach` (Typing[4110])
  File "supportdynamic.bad.php", line 16, characters 12-14:
  Expected an array that can be traversed with foreach because this is used in a `foreach` statement
  File "supportdynamic.bad.php", line 15, characters 32-38:
  But got `nonnull`
File "supportdynamic.bad.php", line 17, characters 12-14:
Invalid `foreach` (Typing[4110])
  File "supportdynamic.bad.php", line 17, characters 12-14:
  Expected an array that can be traversed with foreach because this is used in a `foreach` statement
  File "supportdynamic.bad.php", line 15, characters 32-38:
  But got `nonnull`
File "supportdynamic.bad.php", line 18, characters 3-11:
`await` can only operate on an `Awaitable` (Typing[4110])
  File "supportdynamic.bad.php", line 18, characters 3-11:
  Expected `Awaitable<nothing>`
  File "supportdynamic.bad.php", line 15, characters 32-38:
  But got `nonnull`
File "supportdynamic.bad.php", line 11, characters 9-11:
Expected an object convertible to string but got a value of type supportdyn<nonnull> (Typing[4318])
File "supportdynamic.bad.php", line 4, characters 3-8:
This is not an object of type `KeyedContainer`, this is a value of type supportdyn<nonnull> (Typing[4324])
  File "supportdynamic.bad.php", line 3, characters 15-33:
  Definition is here
File "supportdynamic.bad.php", line 12, characters 3-5:
Typing error (Typing[4429])
  File "supportdynamic.bad.php", line 12, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "supportdynamic.bad.php", line 3, characters 26-32:
  But got `nonnull`
